# AdventOfCode2019

./: .gitignore  CMakeLists.txt
day1/: CMakeLists.txt
day1/include/: fuel.hpp
day1/src/: CMakeLists.txt  fuel.cpp  main.cpp
day1/test/: CMakeLists.txt  fuel_test.cpp
day2/: CMakeLists.txt
day2/include/: program.hpp
day2/src/: CMakeLists.txt  main.cpp
day2/test/: CMakeLists.txt  program_test.cpp
